--- a/WIP/dtm_v2/scss/layout/_navigation.scss
+++ b/WIP/dtm_v2/scss/layout/_navigation.scss
@@ -171,36 +171,42 @@ NAVIGATION
 
   &__sidebar-social-icons {
     /* Sidebar Social Icons - Display Grid */
-    height: 2.5rem;
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: repeat(4, 2.5rem);
-    gap: 3rem;
+    grid-template-columns: repeat(4, 1fr);
+    width: 18.75rem;
+    margin-top: 3rem;
   }
 
   &__sidebar-social-icons-item {
     /* Sidebar Social Icons Container to size SVG */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__sidebar-social-icons-link {
+    // background-color: cornflowerblue;
     height: 2.5rem;
+    width: 2.5rem;
   }
 
   &__sidebar-social-icons-link:link,
   &__sidebar-social-icons-link:visited {
     /* Sidebar SVG Colors, Inherited height from navbar__sidebar-social-icons-item container */
     color: $clr-grey-10;
-    display: inline-flex;
-    height: inherit;
+    display: flex;
+    // height: inherit;
     transition: $transition;
 
     &:hover {
       color: $clr-primary-5;
       box-shadow: 0 5px 10px 6px rgba(0, 0, 0, 0.2);
-      transform: translateY(-3px);
       border-radius: 4px;
     }
 
     &:active {
-      transform: translateY(-1px);
       box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.2);
     }
   }
